syntax="proto3";

package proto;

option go_package = "cchoice/pb";

message ProductSpecs {
   int64 ID = 1;
   string colours = 2;
   string sizes = 3;
   string segmentation = 4;
   string part_number = 5;
   string power = 6;
   string capacity = 7;
   string scope_of_supply = 8;
}
